test/errors/packages_error/zs/imported_default_package_error.zs
package imported_default_package_error;

// This is an error because default package cannot be imported.
import default_package.*;